tests/evaluator/should_fail/error_2.csp
func(0) = 1
func(x) = error(show(x)^" is not an allowed argument")

test2 = func(4) == 1
